--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -76,3 +76,15 @@ table {
 h1, h3, h4, h5, p {
   margin-bottom: 22px;
 }
+
+.btn {
+  margin: 0
+  display: inline-block;
+  border-radius: 5px;
+}
+
+
+ .btn-alt {
+   border: 1px solid #dfe2e5;
+   padding: 10px 30px;
+ }
