styling the header and footer

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -67,6 +67,29 @@ table {
    margin: 0 auto;
  }
 
+ /*
+    ========================================
+    Clearfix
+    ========================================
+ */
+
+ .group:before,
+ .group:after {
+   content: "";
+   display: table;
+ }
+
+.group:after {
+    clear: both;
+  }
+
+ .group {
+   clear: both;
+   *zoom: 1;
+ }
+
+
+
 /*
    ========================================
    Typography
@@ -76,6 +99,13 @@ table {
 h1, h3, h4, h5, p {
   margin-bottom: 22px;
 }
+
+/*
+   ========================================
+   Buttons
+   ========================================
+*/
+
 
 .btn {
   margin: 0
@@ -97,4 +127,31 @@ h1, h3, h4, h5, p {
 
 .hero {
   padding: 22px 80px 66px 80px;
+}
+
+/*
+   ========================================
+   Primary header
+   ========================================
+*/
+
+.logo {
+  border-top: 4px solid #648880;
+  padding: 40px 0 22px 0;
+  float: left;
+}
+
+/*
+   ========================================
+   Primary footer
+   ========================================
+*/
+
+.primary-footer small {
+  float: left;
+}
+
+.primary-footer {
+  padding-top: 44px;
+  padding-bottom: 44px;
 }
