--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -59,3 +59,112 @@ table {
      -moz-box-sizing: border-box;
           box-sizing: border-box;
 }
+
+ .container {
+   width: 960px;
+   padding-left: 30px;
+   padding-right: 30px;
+   margin: 0 auto;
+ }
+
+ /*
+    ========================================
+    Clearfix
+    ========================================
+ */
+
+ .group:before,
+ .group:after {
+   content: "";
+   display: table;
+ }
+
+.group:after {
+    clear: both;
+  }
+
+ .group {
+   clear: both;
+   *zoom: 1;
+ }
+
+
+
+/*
+   ========================================
+   Typography
+   ========================================
+*/
+
+h1, h3, h4, h5, p {
+  margin-bottom: 22px;
+}
+
+/*
+   ========================================
+   Buttons
+   ========================================
+*/
+
+
+.btn {
+  margin: 0
+  display: inline-block;
+  border-radius: 5px;
+}
+
+
+ .btn-alt {
+   border: 1px solid #dfe2e5;
+   padding: 10px 30px;
+ }
+
+ /*
+    ========================================
+    Home
+    ========================================
+ */
+
+.hero {
+  padding: 22px 80px 66px 80px;
+}
+
+/*
+   ========================================
+   Primary header
+   ========================================
+*/
+
+.logo {
+  border-top: 4px solid #648880;
+  padding: 40px 0 22px 0;
+  float: left;
+}
+
+/*
+   ========================================
+   Primary footer
+   ========================================
+*/
+
+.primary-footer small {
+  float: left;
+}
+
+.primary-footer {
+  padding-top: 44px;
+  padding-bottom: 44px;
+}
+
+.col-1-3 {
+  width: 33.33%;
+}
+
+.col-2-3 {
+  width: 66.66%;
+}
+
+.col-1-3, .col-2-3 {
+  display: inline-block;
+  vertical-align: top;
+}
