--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -108,7 +108,7 @@ h1, h3, h4, h5, p {
 
 
 .btn {
-  margin: 0;
+  margin: 0
   display: inline-block;
   border-radius: 5px;
 }
@@ -154,4 +154,17 @@ h1, h3, h4, h5, p {
 .primary-footer {
   padding-top: 44px;
   padding-bottom: 44px;
+}
+
+.col-1-3 {
+  width: 33.33%;
+}
+
+.col-2-3 {
+  width: 66.66%;
+}
+
+.col-1-3, .col-2-3 {
+  display: inline-block;
+  vertical-align: top;
 }
