--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -64,6 +64,11 @@ table {
   width: 33.33%;
 }
 
+.col-2-3 {
+  width: 66.66%;
+}
+
+
  /*
     ========================================
     Clearfix
