styles three columns

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -68,6 +68,11 @@ table {
   width: 66.66%;
 }
 
+.col-1-3, .col-2-3 {
+  display: inline-block;
+  vertical-align: top;
+}
+
 
  /*
     ========================================
