--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -73,6 +73,13 @@ table {
   vertical-align: top;
 }
 
+.grid,
+.col-1-3,
+.col-2-3 {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
 
  /*
     ========================================
