specifies margin and width

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -80,6 +80,12 @@ table {
   padding-left: 15px;
 }
 
+.container,
+.grid {
+    margin: 0 auto;
+    width: 960px;
+}
+
 
  /*
     ========================================
