--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -86,6 +86,11 @@ table {
     width: 960px;
 }
 
+.container {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
 
  /*
     ========================================
