styles the body

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -92,6 +92,18 @@ table {
 }
 
 
+/*
+   ========================================
+   Custom Styles
+   ========================================
+*/
+
+body {
+  color: #888;
+  font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+
  /*
     ========================================
     Clearfix
