--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -103,6 +103,10 @@ body {
   font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+h1 {
+  font-size: 36px;
+  line-height: 44px;
+}
 
  /*
     ========================================
