--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -108,6 +108,12 @@ h1 {
   line-height: 44px;
 }
 
+h2 {
+  font-size: 24px;
+  line-height: 44px;
+}
+
+
  /*
     ========================================
     Clearfix
