--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -121,6 +121,13 @@ h4 {
   font-size: 18px;
 }
 
+h5 {
+  color: #a9b2b9;
+  font-size: 14px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
 
  /*
     ========================================
