styles the links

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -128,6 +128,16 @@ h5 {
   text-transform: uppercase;
 }
 
+/*
+   ========================================
+   Links
+   ========================================
+*/
+
+a {
+  color: #648880;
+  text-decoration: none;
+}
 
  /*
     ========================================
