styles the links in p

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -139,6 +139,11 @@ a {
   text-decoration: none;
 }
 
+p a {
+  border-bottom: 1px solid #dfe2e5;
+}
+
+
  /*
     ========================================
     Clearfix
