styles the links when in hover state

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -143,6 +143,10 @@ p a {
   border-bottom: 1px solid #dfe2e5;
 }
 
+a:hover {
+  color: #a9b2b9;
+}
+
 
  /*
     ========================================
