styles the links when in hover state and styles h3

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -147,6 +147,10 @@ a:hover {
   color: #a9b2b9;
 }
 
+.teaser a:hover h3 {
+  color: #a9b2b9;
+}
+
 
  /*
     ========================================
