styling the tagline

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -156,6 +156,12 @@ a:hover {
   text-align: right;
 }
 
+.primary-nav {
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: .5px;
+  text-transform: uppercase;
+}
 
  /*
     ========================================
