styling the tagline

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -163,6 +163,16 @@ a:hover {
   text-transform: uppercase;
 }
 
+/*
+   ========================================
+   Navigation
+   ========================================
+*/
+
+.nav {
+  text-align: right;
+}
+
  /*
     ========================================
     Clearfix
