--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -173,6 +173,7 @@ a:hover {
   text-align: right;
 }
 
+
  /*
     ========================================
     Clearfix
@@ -264,4 +265,15 @@ h1, h3, h4, h5, p {
   /* letter-spacing: .5em; */
   /* font-size: 48px; */
   line-height: 44px;
+}
+
+/*
+   ========================================
+   Primary footer
+   ========================================
+*/
+
+.primary-footer small {
+  float: left;
+  font-weight: 400;
 }
