--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -174,6 +174,7 @@ a:hover {
 }
 
 
+
  /*
     ========================================
     Clearfix
@@ -272,6 +273,14 @@ h1, h3, h4, h5, p {
    Primary footer
    ========================================
 */
+
+.primary-footer {
+  color: #648880;
+  font-size: 14px;
+  padding-top: 44px;
+  padding-bottom: 44px;
+}
+
 
 .primary-footer small {
   float: left;
